Item Fix for New Panel
Fixes user container not aligning properly when more then 3 was present.

--- a/public/css/NewAdminCSS.css
+++ b/public/css/NewAdminCSS.css
@@ -1,3 +1,7 @@
+html {
+  background-color: #111;
+}
+
 body {
   background-color: #111;
   min-width: 0px;
@@ -239,6 +243,7 @@ h6 {
   height: 100%;
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
 }
@@ -354,6 +359,9 @@ h6 {
   display: block;
   border-radius: 50%;
   margin: -5px;
+}
+.NewPanel.AdminPanel .flex {
+  display: block!important;
 }
 
 @media (max-width:1000px) {
